merge: use upstream version