@@ -77,7 +77,7 @@ public class CategorySalesReportController {
 
     private final ReportDAO reportDAO = new ReportDAO();
     private final ObservableList<ReportRow> reportData = FXCollections.observableArrayList();
-    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
+    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
     private final List<ReportRow> allData = new ArrayList<>();
     private List<ReportRow> filteredData = new ArrayList<>();
     private PaginationControl pagination;
