@@ -61,7 +61,7 @@ public class EnhancedDashboardController {
     @FXML private VBox alertsContainer;
 
     private final ReportDAO reportDAO = new ReportDAO();
-    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
+    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
 
     public EnhancedDashboardController() {
         currencyFormat.setMaximumFractionDigits(0);
@@ -210,7 +210,7 @@ public class EnhancedDashboardController {
             profitSeries.setName("Laba Bersih");
 
             LocalDate today = LocalDate.now();
-            DateTimeFormatter dayFmt = DateTimeFormatter.ofPattern("dd/MM", Locale.of("id", "ID"));
+            DateTimeFormatter dayFmt = DateTimeFormatter.ofPattern("dd/MM", new Locale("id", "ID"));
 
             // Get data for last 7 days
             for (int i = 6; i >= 0; i--) {
