@@ -33,7 +33,7 @@ public class PaymentController {
     private Button payButton;
 
     private BigDecimal grandTotal = BigDecimal.ZERO;
-    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
+    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
     private Runnable onCancel;
     private Consumer<List<SalePayment>> onPay;
 
