@@ -70,7 +70,7 @@ public class SalesReportController {
 
     private final SaleDAO saleDAO = new SaleDAO();
     private final ObservableList<Sale> salesList = FXCollections.observableArrayList();
-    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
+    private final NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
     private final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm");
 
     private boolean isProgrammaticUpdate = false;
